--- a/src/app/account/completely/completely.component.html
+++ b/src/app/account/completely/completely.component.html
@@ -8,8 +8,8 @@
                 <h2>{{set_header}}</h2>
                 <h3> {{set_text}} </h3>
             </mat-card-content>
-            <a href="/"><button mat-fab extended color="primary" translate>
-                    Back to the home
+            <a href="/"><button mat-fab extended color="primary">
+                    <p translate>Back to the home</p>
                 </button></a>
         </mat-card>
     </div>
