--- a/src/app/account/landing-reset-password/landing-reset-password.component.html
+++ b/src/app/account/landing-reset-password/landing-reset-password.component.html
@@ -8,14 +8,18 @@
             </mat-card-content>
             <form class="register-form" (ngSubmit)="submitForm()">
                 <mat-form-field>
-                    <mat-label translate>Enter your password</mat-label>
+                    <mat-label>
+                        <p translate>Enter your password</p>
+                    </mat-label>
                     <input matInput [type]="hide ? 'password' : 'text'" required [formControl]="password1">
                     @if (password1.invalid) {<mat-error>{{getErrorMessagepassword1()}}</mat-error>}
                     @if (password1.valid) { <mat-icon matSuffix>check</mat-icon>}
                     <mat-hint>{{password_incorrect}}</mat-hint>
                 </mat-form-field>
                 <mat-form-field>
-                    <mat-label translate>Enter your password again</mat-label>
+                    <mat-label>
+                        <p translate>Enter your password again</p>
+                    </mat-label>
                     <input matInput [type]="hide ? 'password' : 'text'" required [formControl]="password2">
                     @if (password2.invalid) {<mat-error>{{getErrorMessagepassword2()}}</mat-error>}
                     @if (password2.valid) { <mat-icon matSuffix>check</mat-icon>}
