--- a/src/app/content/nature/nature.component.html
+++ b/src/app/content/nature/nature.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="wrapper">
     <div class="content">
-        <h1>Nature</h1>
+        <h1 translate>Nature</h1>
         <div class="content-boxing ">
             <div class="content-draggable" id="content-box">
                 <div class="progress-div" *ngIf="loading"><mat-progress-bar mode="indeterminate"></mat-progress-bar>
