--- a/src/app/content/series/series.component.html
+++ b/src/app/content/series/series.component.html
@@ -2,7 +2,7 @@
 <div class="wrapper">
 
     <div class="content">
-        <h1>Serien</h1>
+        <h1 translate>Series</h1>
         <div class="content-boxing ">
             <div class="content-draggable" id="content-box">
 
