--- a/src/app/module/category/category-funny/category-funny.component.html
+++ b/src/app/module/category/category-funny/category-funny.component.html
@@ -1,5 +1,7 @@
 <div class="content">
-    <p translate>Funny</p>
+    <a href="/funny" class="category-link">
+        <p translate>Funny</p>
+    </a>
     <div class="content-boxing ">
         <div class="content-draggable" id="content-box">
             <div *ngFor="let single of data" class="content-box">
