--- a/src/app/module/category/category-header/category-header.component.html
+++ b/src/app/module/category/category-header/category-header.component.html
@@ -1,20 +1,20 @@
 <div class="category">
     <div class="category-box">
-        <a href="/my">Meine</a>
+        <a href="/my" translate>My</a>
     </div>
     <div class="category-box">
-        <a href="/movies">Filme</a>
+        <a href="/movies" translate>Movie</a>
     </div>
     <div class="category-box">
-        <a href="/series">Serien</a>
+        <a href="/series" translate>Series</a>
     </div>
     <div class="category-box">
-        <a href="/nature">Natur</a>
+        <a href="/nature" translate>Nature</a>
     </div>
     <div class="category-box">
-        <a href="/funny">Lustiges</a>
+        <a href="/funny" translate>Funny</a>
     </div>
     <div class="category-box">
-        <a href="/knowledge">Wissen</a>
+        <a href="/knowledge" translate>Knowledge</a>
     </div>
 </div>
