--- a/src/app/module/category/category-knowledge/category-knowledge.component.html
+++ b/src/app/module/category/category-knowledge/category-knowledge.component.html
@@ -1,5 +1,7 @@
 <div class="content">
-    <p>Wissen</p>
+    <a href="/knowledge" class="category-link">
+        <p translate>Knowledge</p>
+    </a>
     <div class="content-boxing ">
         <div class="content-draggable" id="content-box">
             <div *ngFor="let single of data" class="content-box">
