--- a/src/app/module/category/category-your-movies/category-your-movies.component.html
+++ b/src/app/module/category/category-your-movies/category-your-movies.component.html
@@ -1,5 +1,7 @@
 <div class="content">
-    <p>Deine Filme</p>
+    <a href="/my" class="category-link">
+        <p translate>My Movies</p>
+    </a>
     <div class="content-boxing ">
         <div class="content-draggable" id="content-box">
             <div *ngFor="let single of data" class="content-box">
