--- a/src/app/module/category/content-box.scss
+++ b/src/app/module/category/content-box.scss
@@ -5,6 +5,7 @@
   margin-left: 7%;
   margin-top: 35px;
   max-width: 100%;
+
   p {
     font-size: calc(18px + 1vw) !important;
     margin-left: 10px;
@@ -14,6 +15,16 @@
     p {
       margin-left: 15px;
     }
+  }
+}
+
+.category-link {
+  width: fit-content;
+  text-decoration: none;
+  transition: all 0.2s ease;
+  &:hover {
+    scale: 1.2;
+    transition: all 0.2s ease;
   }
 }
 
