--- a/src/app/storage/upload/status.dialog.html
+++ b/src/app/storage/upload/status.dialog.html
@@ -1,9 +1,13 @@
 <h2 mat-dialog-title align="center">Status</h2>
 
 
-<div mat-dialog-content>Bitte warten Sie bis der Upload beendet ist <br> bzw. füllen Sie die erforderlichen Felder aus.
+<div mat-dialog-content>
+    <p translate>Please wait until the upload is finished</p>
+    <p>or fill in the required fields.</p>
 </div>
 
 <div mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close>Close</button>
+    <button mat-button mat-dialog-close>
+        <p translate>Close</p>
+    </button>
 </div>
