--- a/src/app/templates/header/dialog/dialog.style.scss
+++ b/src/app/templates/header/dialog/dialog.style.scss
@@ -46,7 +46,12 @@ h2 {
   flex-wrap: wrap;
   p {
     margin: 0;
-    margin-left: 20px;
+    margin-left: 20px !important;
+  }
+  button {
+    p {
+      margin: 0 !important;
+    }
   }
 }
 
