--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -2,25 +2,31 @@
     <div class="register">
         <mat-card class="register-card">
             <mat-card-header>
-                <mat-card-subtitle translate>2. STEP</mat-card-subtitle>
+                <mat-card-subtitle>
+                    <p translate>2. STEP</p>
+                </mat-card-subtitle>
             </mat-card-header>
             <mat-card-content>
                 <h2 translate>Create an account to continue</h2>
                 <h3 translate>You can log in to Videoflix with this combination of e-mail address and password.
                 </h3>
                 <span id="email-input-none"> <span translate>Enter a password to create an account
-                        for</span><i>{{email}}</i> <span translate>to create</span>
+                        for </span><i>{{email}}</i> <span translate> to create</span>
                     <a class="change-email" (click)="changeEmail()" translate>
                         (edit)</a>
                 </span>
             </mat-card-content>
             <form class="register-form" (ngSubmit)="submitForm()">
                 <mat-form-field>
-                    <mat-label translate>Your Name</mat-label>
+                    <mat-label>
+                        <p translate>Your Name</p>
+                    </mat-label>
                     <input matInput [formControl]="name">
                 </mat-form-field>
                 <mat-form-field id="email-input" class="dn">
-                    <mat-label translate>Enter your email</mat-label>
+                    <mat-label>
+                        <span translate>Enter your email</span>
+                    </mat-label>
                     <input matInput placeholder="yourMail@example.com" [formControl]="emailerror" required>
                     @if (emailerror.invalid) {
                     <mat-error>{{getErrorMessageEmail()}}</mat-error>
@@ -29,14 +35,18 @@
 
                 </mat-form-field>
                 <mat-form-field>
-                    <mat-label translate>Enter your password</mat-label>
+                    <mat-label>
+                        <span translate>Enter your password</span>
+                    </mat-label>
                     <input matInput [type]="hide ? 'password' : 'text'" required [formControl]="password1">
                     @if (password1.invalid) {<mat-error>{{getErrorMessagepassword1()}}</mat-error>}
                     @if (password1.valid) { <mat-icon matSuffix>check</mat-icon>}
                     <mat-hint>{{password_incorrect}}</mat-hint>
                 </mat-form-field>
                 <mat-form-field>
-                    <mat-label translate>Enter your password again</mat-label>
+                    <mat-label>
+                        <span translate>Enter your password again</span>
+                    </mat-label>
                     <input matInput [type]="hide ? 'password' : 'text'" required [formControl]="password2">
                     @if (password2.invalid) {<mat-error>{{getErrorMessagepassword2()}}</mat-error>}
                     @if (password2.valid) { <mat-icon matSuffix>check</mat-icon>}
@@ -46,12 +56,13 @@
                     character. one special character.</p>
                 <span> <span translate>Videoflix uses your data to personalise and customise your Videoflix experience.
                         to improve it. You can change your change your communication settings at any time. We may use
-                        your data as described in our</span>
-                    <i><a href="/privacy-policy" translate>Privacy policy</a></i> <span translate>as described above. By
+                        your data as described in our </span>
+                    <i><a href="/privacy-policy" translate>Privacy policy</a></i> <span translate> as described above.
+                        By
                         clicking on "Continue", confirm that you accept our </span><i><a href="/privacy-policy"
-                            translate>Privacy policy</a></i> <span translate>and</span> <i><a href="/cookie-policy"
+                            translate>Privacy policy</a></i> <span translate> and </span> <i><a href="/cookie-policy"
                             translate>Cookie Policy</a></i>
-                    <span translate>have read.</span>
+                    <span translate> have read.</span>
                 </span>
                 <button class="next-button" mat-fab extended color="primary">
                     <p translate>Next</p>
