--- a/src/app/module/category/category-series/category-series.component.html
+++ b/src/app/module/category/category-series/category-series.component.html
@@ -1,5 +1,7 @@
 <div class="content">
-    <p translate>Series</p>
+    <a href="/series" class="category-link">
+        <p translate>Series</p>
+    </a>
     <div class="content-boxing ">
         <div class="content-draggable" id="content-box">
             <div *ngFor="let single of data" class="content-box">
