--- a/src/app/module/my-uploads/my-uploads.component.html
+++ b/src/app/module/my-uploads/my-uploads.component.html
@@ -9,24 +9,24 @@
 
             <!-- Position Column -->
             <ng-container matColumnDef="movie_name">
-                <th mat-header-cell *matHeaderCellDef> Name </th>
+                <th mat-header-cell *matHeaderCellDef translate> Name </th>
                 <td mat-cell *matCellDef="let element"> {{element.movie_name}} </td>
             </ng-container>
 
             <!-- Name Column -->
             <ng-container matColumnDef="created_at">
-                <th mat-header-cell *matHeaderCellDef> Erstellt am </th>
+                <th mat-header-cell *matHeaderCellDef translate> Created at</th>
                 <td mat-cell *matCellDef="let element"> {{element.created_at}} </td>
             </ng-container>
 
             <!-- Weight Column -->
             <ng-container matColumnDef="genre">
-                <th mat-header-cell *matHeaderCellDef> Genre </th>
+                <th mat-header-cell *matHeaderCellDef translate> Genre </th>
                 <td mat-cell *matCellDef="let element"> {{element.genre}} </td>
             </ng-container>
 
             <ng-container matColumnDef="cover">
-                <th mat-header-cell *matHeaderCellDef> Cover </th>
+                <th mat-header-cell *matHeaderCellDef translate> Cover </th>
                 <td mat-cell *matCellDef="let element"><a href="/single-view?select={{element.random_key}}"> <img
                             [src]="element.cover" /></a> </td>
             </ng-container>
@@ -34,7 +34,9 @@
             <ng-container matColumnDef="change">
                 <th mat-header-cell *matHeaderCellDef></th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-raised-button color="accent" (click)="changeMovie(element.random_key)">Edit</button>
+                    <button mat-raised-button color="accent" (click)="changeMovie(element.random_key)">
+                        <p translate>Edit</p>
+                    </button>
                 </td>
             </ng-container>
             <ng-container matColumnDef="delete">
