--- a/src/styles.scss
+++ b/src/styles.scss
@@ -117,6 +117,10 @@ body {
   }
 }
 
+p {
+  margin: 0 !important;
+}
+
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
@@ -148,10 +152,16 @@ h1 {
 h2 {
   font-size: calc(18px + 1.75vw) !important;
   line-height: 120% !important;
+  @media (min-width: 1200px) {
+    font-size: 42px !important;
+  }
 }
 h3 {
   font-size: calc(12px + 0.5vw) !important;
   line-height: 120% !important;
+  @media (min-width: 1200px) {
+    font-size: 22px !important;
+  }
 }
 
 span {
