--- a/src/app/policy/imprint/imprint.component.html
+++ b/src/app/policy/imprint/imprint.component.html
@@ -1,3 +1,6 @@
+<button (click)="goBack()" mat-fab extended color="">
+    <p translate>back</p>
+</button>
 <div class='impressum'>
     <h1>Impressum</h1>
     <p>Angaben gemäß § 5 TMG</p>
