--- a/src/app/policy/privacy-policy/privacy-policy.component.html
+++ b/src/app/policy/privacy-policy/privacy-policy.component.html
@@ -1,3 +1,6 @@
+<button (click)="goBack()" mat-fab extended color="">
+    <p translate>back</p>
+</button>
 <div class="content">
     <h1>Datenschutz&shy;erkl&auml;rung</h1>
     <h2>1. Datenschutz auf einen Blick</h2>
@@ -263,5 +266,21 @@
         Datenschutzerkl&auml;rung von Google: <a href="https://policies.google.com/privacy?hl=de" target="_blank"
             rel="noopener noreferrer">https://policies.google.com/privacy?hl=de</a>.</p>
     <p>Quelle: <a href="https://www.e-recht24.de">https://www.e-recht24.de</a></p>
+
+    <h2>6. Nutzung von frei verfügbaren Bildern und Videos</h2>
+    <h3>Von Pixabay</h3>
+    <p>Wir verwenden auf dieser Website Bilder und Videos, die von der Plattform Pixabay bereitgestellt werden. Pixabay
+        bietet eine Vielzahl von hochwertigen Medieninhalten, die unter einer Creative Commons Lizenz veröffentlicht
+        sind. Diese Medien können frei genutzt, auch für kommerzielle Zwecke, ohne Lizenzgebühren oder Nennung des
+        Urhebers. Die Nutzung von Pixabay-Medien unterliegt den Nutzungsbedingungen von Pixabay:
+        https://pixabay.com/de/service/terms/.</p>
+    <p>Die Integration von Pixabay-Medien erfolgt auf Grundlage unseres berechtigten Interesses an der visuellen
+        Gestaltung unserer Website und der Verbesserung der Benutzererfahrung gemäß Art. 6 Abs. 1 lit. f DSGVO. Wir
+        achten darauf, dass die eingebundenen Medien in Übereinstimmung mit den Nutzungsbedingungen von Pixabay genutzt
+        werden.</p>
+    <p>Bitte beachten Sie, dass, obwohl die Bilder und Videos von Pixabay frei verfügbar sind, die Urheberrechte
+        weiterhin bei den jeweiligen Fotografen oder Künstlern liegen. Sollten Sie Grund zur Annahme haben, dass Ihre
+        Urheberrechte verletzt wurden, kontaktieren Sie uns bitte umgehend, damit wir entsprechende Maßnahmen ergreifen
+        können.</p>
 </div>
 <app-footer></app-footer>
