--- a/src/app/templates/footer/footer.component.html
+++ b/src/app/templates/footer/footer.component.html
@@ -9,8 +9,8 @@
             <button mat-menu-item (click)="changeLanguage('en')"><span translate>English</span></button>
             <button mat-menu-item (click)="changeLanguage('de')"><span translate>German</span></button>
         </mat-menu>
-        <a href="privacy-policy" translate>Datenschutzerklärung</a>
-        <a href="imprint" translate>Impressum</a>
+        <a href="privacy-policy" translate>Privacy policy</a>
+        <a href="imprint" translate>Imprint</a>
     </div>
     <p>© Tony Tech 2023</p>
 </div>
