--- a/src/app/templates/header/dialog/konto-account.html
+++ b/src/app/templates/header/dialog/konto-account.html
@@ -29,8 +29,8 @@
                     </mat-label>
                     <input matInput [type]="hide ? 'password' : 'text'" [(ngModel)]="current_password"
                         name="current_password">
-                    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-                        [attr.aria-pressed]="hide">
+                    <button mat-icon-button matSuffix type="button" (click)="hide = !hide"
+                        [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                     </button>
                 </mat-form-field>
@@ -39,8 +39,8 @@
                         <span translate>Enter new password</span>
                     </mat-label>
                     <input matInput [type]="hide ? 'password' : 'text'" [formControl]="new_password">
-                    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-                        [attr.aria-pressed]="hide">
+                    <button mat-icon-button matSuffix type="button" (click)="hide = !hide"
+                        [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                     </button>
                 </mat-form-field>
